tests/errors/unterminated_ifndef_01.f90
#ifndef a

program unterminated_ifndef_01
   implicit none
   print *, "Hello world"
end program unterminated_ifndef_01
